--- a/src/CartItem.css
+++ b/src/CartItem.css
@@ -49,6 +49,11 @@
   border-radius: 5px;
 }
 
+.cart-item-button.disabled {
+  background-color: #ccc;
+  color: #fff;
+}
+
 .cart-item-quantity-value {
   font-size: 16px;
   font-weight: bold;
